UDT-22 fix: 불필요한 조건문 수정